@@ -1,0 +1,9 @@
+package Mogstored::HTTPServer::Lighttpd;
+use strict;
+use base 'Mogstored::HTTPServer';
+
+sub start {
+    die "TODO: start lighttpd";
+}
+
+1;
